ngw.tf
# // ngw

# resource "aws_nat_gateway" "ngw" {
#   allocation_id = aws_eip.eip_alloc.id
#   subnet_id     = aws_subnet.sub1.id

#   tags = {
#     Name = "gw-NAT"
#   }

#   # To ensure proper ordering, it is recommended to add an explicit dependency
#   # on the Internet Gateway for the VPC.
#   #   depends_on = [aws_internet_gateway.example]
# }


# // allocate eip to ngw

# resource "aws_eip" "eip_alloc" {
#   vpc = true
# }
